# ohio_utility_scraper

./: .gitignore  README.md  export_requirements.sh  pyproject.toml  requirements.ci.txt  requirements.dev.txt  requirements.txt  ruff.toml
ohioenergy/: load_msgpack.py  main.py  scrapy.cfg
ohioenergy/.scrapy/httpcache/ohioenergyproviders/32/326ff085974a69ce12bf86def5179b842a7c1b6e/: meta  pickled_meta  request_headers  response_body  response_headers
ohioenergy/.scrapy/httpcache/ohioenergyproviders/38/38cf5a129f6b98e3d7e19ccaaaab4e22492f18ff/: meta  pickled_meta  request_headers  response_headers
ohioenergy/.scrapy/httpcache/ohioenergyproviders/4a/4a3a9391dab691e5a5508b28eb2f60237b89dbee/: meta  pickled_meta  response_headers
ohioenergy/.scrapy/httpcache/ohioenergyproviders/58/5882d5ef735b0a45f22e51c420775ee1857a72f2/: meta  pickled_meta  request_headers  response_body  response_headers
ohioenergy/.scrapy/httpcache/ohioenergyproviders/e3/e39dcbdc9d2fe5f6cc3edaef2fd836c276bb1774/: meta  pickled_meta  request_headers  response_headers
ohioenergy/core/: config.py  constants.py  database.py
ohioenergy/core/logging/: logger.py
ohioenergy/lib/: file_utils.py  msgpack_utils.py  request_utils.py  text_utils.py  time_utils.py
ohioenergy/models/: provider_models.py
ohioenergy/ohioenergy/: items.py  middlewares.py  pipelines.py  settings.py
ohioenergy/ohioenergy/spiders/: ohioenergyproviders.py
poetry_ver/: pyproject.toml
