[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.263",
    "pytest>=7.3.1",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "None"},
]
dependencies = [
    "scrapy>=2.8.0",
    "pydantic[dotenv]>=1.10.7",
    "sqlalchemy>=2.0.11",
    "stackprinter>=0.2.10",
    "requests-cache>=1.0.1",
    "arrow>=1.2.3",
    "msgpack>=1.0.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}
